fix: update carousel and news

--- a/content/0.index.md
+++ b/content/0.index.md
@@ -4,7 +4,10 @@ layout: home
 
 ::home-hero
 ---
-news: What's new
+news:
+  prefix: What's new
+  title:
+  path:
 puzzle:
   - name: nitro
     justify: end
@@ -41,12 +44,12 @@ away:
 #title
 Unleash your Full Potential by Mastering UnJS
 #subtitle
-Learn the basic, build full applications and explore endless possibilites with our in-depth articles.
+Learn the basic, build full applications and explore endless possibilites with our in‑depth articles.
 ::
 
 ::home-unjs-philosophy-section
 ---
-class: mt-30
+class: mt-24 md:mt-30
 cards:
   - title: High-quality & Single-Purpose
     description: Every package is finely crafted and focused on specific functionalities making them easy to understand and efficient.
@@ -68,7 +71,7 @@ A robust ecosystem driven by the UNIX Philosophy, housing purpose-built, high-qu
 
 ::home-learn-the-basics-section
 ---
-class: mt-30
+class: mt-24 md:mt-30
 ---
 #eyebrow
 Develop a strong foundation
@@ -81,26 +84,34 @@ Embark for a journey through this vast ecosystem, unraveling the mysteries and u
 
 ::home-the-unjs-universe
 ---
-class: mt-30
+class: mt-24 md:mt-30
 cta:
   text: Explore the Universe
   to: /packages
 carousel:
-  - part: nitro
+  - name: nitro
+    justify: start
     align: start
-  - part: citty
+  - name: citty
+    justify: start
     align: end
-  - part: destr
+  - name: destr
+    justify: start
     align: center
-  - part: consola
+  - name: consola
+    justify: start
     align: center
-  - part: defu
+  - name: defu
+    justify: start
     align: start
-  - part: ofetch
+  - name: ofetch
+    justify: start
     align: start
-  - part: changelogen
+  - name: changelogen
+    justify: start
     align: end
-  - part: unbuild
+  - name: unbuild
+    justify: start
     align: center
 ---
 #eyebrow
@@ -113,7 +124,7 @@ Embrace the harmony of consistent, independent solutions that work together and 
 
 ::home-build-a-project-section
 ---
-class: mt-30
+class: mt-24 md:mt-30
 ---
 #eyebrow
 Unleash the power of the ecosystem
